AOT compile and small changes.