@@ -4,4 +4,10 @@
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
   :dependencies [[org.clojure/clojure "1.6.0"]
-                 [quil "2.2.0"]])
+                 [org.clojure/data.priority-map "0.0.5"]
+                 [quil "2.2.0"]]
+  :source-paths ["src"]
+  ;; :omit-source true
+  :main mst.core
+  ;; :jvm-opts ["-XX:+AggressiveOpts" "-Xmx2g"]
+  :aot [mst.core])
